fix spacing for desktop view

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,6 +1,6 @@
 .habit {
   margin: 30px 0 0 115px;
-  width: 60%;
+  width: 85%;
 }
 
 .commit-graph {
